--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -21,7 +21,7 @@
          <div class="control-group currently-playing">
              <h2 class="song-name"> {{ playerBar.songPlayer.currentSong.title }}</h2>
              <h2 class="artist-song-mobile"></h2>
-             <h3 class="artist-name"> {{ playerBar.songPlayer.currentAlbum.artist }}</h3>
+             <h3 class="artist-name"> {{ playerBar.albumData.artist }}</h3>
              <div class="seek-control">
                <seek-bar></seek-bar>
                  <div class="current-time"></div>
