--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -23,12 +23,12 @@
              <h2 class="artist-song-mobile"></h2>
              <h3 class="artist-name"> {{ playerBar.albumData.artist }}</h3>
              <div class="seek-control">
-               <seek-bar value="{{ playerBar.songPlayer.currentTime }}" max="{{ playerBar.songPlayer.currentSong.duration }}"></seek-bar>
+               <seek-bar value="{{ playerBar.songPlayer.currentTime }}" max="{{ playerBar.songPlayer.currentSong.duration }}" on-change="playerBar.songPlayer.setCurrentTime(value)"></seek-bar>
                  <div class="current-time">{{ playerBar.songPlayer.currentTime }}</div>
                  <div class="total-time">{{ playerBar.songPlayer.currentSong.duration }}</div>
              </div>
          </div>
-         <div class="control-group volume">
+         <div class="control-group volume" volume = "{{ playerBar.songPlayer.setVolume(volume)}}">
              <span class="icon ion-volume-high"></span>
              <seek-bar value="{{ playerBar.songPlayer.volume}}" max="{{ playerBar.songPlayer.setVolume }}" ></seek-bar>
          </div>
